--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -12,7 +12,9 @@
 
 \showindex[2]{Inhaltsverzeichnis}{Seitenzahlen}
 
-\setthumb{Deutsche Lieder}{1}
+\songsection{Deutsche Lieder}
+
+\setthumb{A}{1}
 \input{Lieder/NehmtAbschiedBrueder}
 \input{Lieder/Raubritter}
 \input{Lieder/DieMoorsoldaten}
@@ -23,18 +25,20 @@
 \input{Lieder/UeberdenWolken}
 \input{Lieder/DerPietamGalgenhaengt}
 \input{Lieder/FruehlingDringtInDenNorden}
+\setthumb{B}{1}
 \input{Lieder/Michelwarumweinestdu}
 \input{Lieder/Narrenschiff}
 \input{Lieder/WirsinddesGeyers}
 \input{Lieder/AbendstretenElche}
 \input{Lieder/Jalava}
 \input{Lieder/HierwaechstkeinAhorn}
-\input{Lieder/WennwirinderSchaenkehaengen}
+\input{Lieder/WennwirinderSchenkehaengen}
 \input{Lieder/WirsindeinekleineverloreneSchar}
 \input{Lieder/Bellaciao}
 \input{Lieder/BellaCiao2}
 
-\setthumb{Englische Lieder}{2}
+\songsection{Englische Lieder}
+\setthumb{A}{1}
 \input{Lieder/LadyinBlack}
 
 
