--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -4,15 +4,13 @@
 
 \input{Misc/basic}
 
-\newindex{Seitenzahlen}{Ausgaben/LittlePink}
+\newindex{Seitenzahlen}{Ausgaben/Tinnitus}
 \indexsongsas{Seitenzahlen}{\thepage}
 
 \begin{document}
 \begin{songs}{Seitenzahlen}
 
 \showindex[2]{Inhaltsverzeichnis}{Seitenzahlen}
-
-\songsection{Deutsche Lieder}
 
 \setthumb{A}{1}
 \input{Lieder/NehmtAbschiedBrueder}
@@ -25,7 +23,7 @@
 \input{Lieder/UeberdenWolken}
 \input{Lieder/DerPietamGalgenhaengt}
 \input{Lieder/FruehlingDringtInDenNorden}
-\setthumb{B}{1}
+\setthumb{B}{2}
 \input{Lieder/Michelwarumweinestdu}
 \input{Lieder/Narrenschiff}
 \input{Lieder/WirsinddesGeyers}
@@ -37,8 +35,7 @@
 \input{Lieder/Bellaciao}
 \input{Lieder/BellaCiao2}
 
-\songsection{Englische Lieder}
-\setthumb{A}{1}
+\setthumb{C}{3}
 \input{Lieder/LadyinBlack}
 
 
