--- a/Misc/basic.tex
+++ b/Misc/basic.tex
@@ -268,6 +268,11 @@
 \newsongkey{egplus}{\def\egplus{}}
         {\def\egplus{EGplus:~#1 }}
 
+% Oedt Liederbuch
+\newcommand{\oedt}{}
+\newsongkey{oedt}{\def\oedt{}}
+        {\def\oedt{Oedt:~#1 }}
+
 
 % Nach dem Lied 
 \renewcommand{\extendpostlude}{
