--- a/Misc/basic.tex
+++ b/Misc/basic.tex
@@ -176,6 +176,11 @@
 \newcommand{\alb}{}
 \newsongkey{alb}{\def\alb{}}
         {\def\alb{ Album:~#1}}
+
+% Schlagmuster
+\newcommand{\schm}{}
+\newsongkey{schm}{\def\schm{}}
+        {\def\schm{ Schlagmuster:~#1}}
         
         
 % Lager
@@ -285,6 +290,7 @@
         \alb
         \jahr
         \tonart
+        \schm
     \par}
     {\small
         \lager
