--- a/Misc/basic.tex
+++ b/Misc/basic.tex
@@ -290,6 +290,7 @@
         \alb
         \jahr
         \tonart
+        \par
         \schm
     \par}
     {\small
@@ -309,7 +310,6 @@
         \eg
         \egplus
         \oedt
-        \schm
     \break}
 }
 
