--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -39,6 +39,12 @@
 \input{Lieder/LadyinBlack}
 
 
+\input{Misc/GrifftabelleUkuleleGCEA}
+\input{Misc/GrifftabelleUkuleleADFisH}
+\input{Misc/GrifftabelleUkuleleDGHE}
+\input{Misc/GrifftabelleGitarre}
+
+
 \end{songs}
 
 \end{document}
