--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -39,7 +39,17 @@
 \input{Lieder/LadyinBlack}
 
 
+\begin{intersong}
+    \newpage
+	\markboth{}{}
+	\newpage
+	\rightwatermark{}
+\end{intersong}
+
+\nothumb
 \input{Misc/GrifftabelleUkuleleGCEA}
+
+\nothumb
 \input{Misc/GrifftabelleUkuleleADFisH}
 \input{Misc/GrifftabelleUkuleleDGHE}
 \input{Misc/GrifftabelleGitarre}
