--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -12,6 +12,15 @@
 
 \showindex[2]{Inhaltsverzeichnis}{Seitenzahlen}
 
+\begin{intersong}
+    \nothumb
+    \markboth{}{}
+    \songchapter{Deutsche Lieder}
+    \center
+    %\includegraphics[width=\textwidth]{Bilder/IrenaRuppert_Friedenstaube.jpg}
+    \newpage\null
+\end{intersong}
+
 \setthumb{A}{1}
 \input{Lieder/NehmtAbschiedBrueder}
 \input{Lieder/Raubritter}
@@ -35,21 +44,32 @@
 \input{Lieder/Bellaciao}
 \input{Lieder/BellaCiao2}
 
-\setthumb{C}{3}
+\begin{intersong}
+    \newpage\null
+    \nothumb
+    \markboth{}{}
+    \songchapter{Englische Lieder}
+    \center
+    %\includegraphics[width=\textwidth]{Bilder/IrenaRuppert_Friedenstaube.jpg}
+    \newpage\null
+\end{intersong}
+
+\setthumb{A}{1}
 \input{Lieder/LadyinBlack}
+\setthumb{F}{6}
+\input{Lieder/Flyaway}
+\input{Lieder/FatherandSon}
 
 
 \begin{intersong}
     \newpage
-	\markboth{}{}
-	\newpage
-	\rightwatermark{}
+    \markboth{}{}
+    \songchapter{Anhang}
+	\newpage\null
 \end{intersong}
 
 \nothumb
 \input{Misc/GrifftabelleUkuleleGCEA}
-
-\nothumb
 \input{Misc/GrifftabelleUkuleleADFisH}
 \input{Misc/GrifftabelleUkuleleDGHE}
 \input{Misc/GrifftabelleGitarre}
