test broken page endings

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -23,6 +23,11 @@
 \input{Lieder/Raubritter}
 \input{Lieder/DieMoorsoldaten}
 \input{Lieder/Nordwaerts}
+
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
+
 \input{Lieder/DieGedankensindfrei}
 \input{Lieder/Heutehiermorgendort}
 \input{Lieder/RoterWeinimBecher}
@@ -31,6 +36,11 @@
 \input{Lieder/FruehlingDringtInDenNorden}
 \setthumb{B}{2}
 \input{Lieder/Michelwarumweinestdu}
+
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
+
 \input{Lieder/Narrenschiff}
 \input{Lieder/WirsinddesGeyers}
 \input{Lieder/AbendstretenElche}
