--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -10,6 +10,9 @@
 \begin{document}
 \begin{songs}{Seitenzahlen}
 
+\input{Ausgaben/Tinnitus/Vorwort}
+\newpage
+
 \showindex[2]{Inhaltsverzeichnis}{Seitenzahlen}
 
 \begin{intersong}
