Draft Tinnitus add FelderVonVerdun

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -18,41 +18,99 @@
 \begin{intersong}
     \nothumb
     \markboth{}{}
+    \songchapter{Christliches}
+\end{intersong}
+
+\setthumb{D}{4}
+\input{Lieder/Danke}
+\setthumb{H}{8}
+\input{Lieder/Hallelujah}
+\setthumb{L}{12}
+\input{Lieder/Laudatosi}
+\input{Lieder/LobetUndPreiset}
+\setthumb{N}{14}
+\input{Lieder/NehmtAbschiedBrueder}
+\setthumb{W}{23}
+\input{Lieder/WennDasBrot}
+\input{Lieder/WoZweiOderDrei}
+
+\begin{intersong}
+    \newpage\null
+    \nothumb
+    \markboth{}{}
     \songchapter{Deutsche Lieder}
 \end{intersong}
 
+
 \setthumb{A}{1}
-\input{Lieder/NehmtAbschiedBrueder}
-\input{Lieder/Raubritter}
-\input{Lieder/DieMoorsoldaten}
-\input{Lieder/Nordwaerts}
-
-\begin{intersong} % Fix broken page ending
-    \flushbottom\newpage\flushbottom
-\end{intersong}
-
-\input{Lieder/DieGedankensindfrei}
-\input{Lieder/Heutehiermorgendort}
-\input{Lieder/RoterWeinimBecher}
-\input{Lieder/UeberdenWolken}
-\input{Lieder/DerPietamGalgenhaengt}
-\input{Lieder/FruehlingDringtInDenNorden}
-\setthumb{B}{2}
-\input{Lieder/Michelwarumweinestdu}
-
-\begin{intersong} % Fix broken page ending
-    \flushbottom\newpage\flushbottom
-\end{intersong}
-
-\input{Lieder/Narrenschiff}
-\input{Lieder/WirsinddesGeyers}
 \input{Lieder/AbendstretenElche}
-\input{Lieder/Jalava}
-\input{Lieder/HierwaechstkeinAhorn}
-\input{Lieder/WennwirinderSchenkehaengen}
-\input{Lieder/WirsindeinekleineverloreneSchar}
+\input{Lieder/Abenteuerland}
+\input{Lieder/Allesnurgeklaut}
+\setthumb{B}{2}
 \input{Lieder/Bellaciao}
 \input{Lieder/BellaCiao2}
+\input{Lieder/BieneMaja}
+\setthumb{D}{4}
+\input{Lieder/Denkmal}
+\input{Lieder/DerMondistaufgegangen}
+\input{Lieder/DerPietamGalgenhaengt}
+\input{Lieder/DieGedankensindfrei}
+\input{Lieder/DieLappenhoch}
+\input{Lieder/DieMoorsoldaten}
+\input{Lieder/DutraegstkeineLiebeindir}
+\setthumb{E}{5}
+\input{Lieder/EineInselmitzweiBergen}
+\input{Lieder/EinKompliment}
+\input{Lieder/EswaraneinemSommertag}
+\setthumb{F}{6}
+\input{Lieder/FroescheWeinenNie}
+\input{Lieder/FruehlingDringtInDenNorden}
+\setthumb{G}{7}
+\input{Lieder/GriechischerWein}
+\setthumb{H}{8}
+\input{Lieder/Heutehiermorgendort}
+\input{Lieder/HierwaechstkeinAhorn}
+\setthumb{I}{9}
+\input{Lieder/ImWagenvormir}
+\input{Lieder/InJunkersKneipe}
+\setthumb{J}{10}
+\input{Lieder/Jalava}
+\input{Lieder/JohnnyWalker}
+\setthumb{M}{13}
+\input{Lieder/MarmorSteinundEisenbricht}
+\input{Lieder/MeinkleinergruenerKaktus}
+\input{Lieder/Michelwarumweinestdu}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
+\setthumb{N}{14}
+\input{Lieder/Narrenschiff}
+\input{Lieder/Nordwaerts}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
+\setthumb{P}{16}
+\input{Lieder/ProbiersmalmitGemuetlichkeit}
+\setthumb{R}{18}
+\input{Lieder/Raubritter}
+\input{Lieder/RoterMond}
+\input{Lieder/RoterWeinimBecher}
+\setthumb{S}{19}
+\input{Lieder/SchreinachLiebe}
+\input{Lieder/SkandalimSperrbezirk}
+\setthumb{U}{21}
+\input{Lieder/UeberdenWolken}
+\input{Lieder/UnterdenToren}
+\setthumb{W}{23}
+\input{Lieder/Waswollenwirtrinken}
+\input{Lieder/WennwirinderSchenkehaengen}
+\input{Lieder/Westerland}
+\input{Lieder/WirsinddesGeyers}
+\input{Lieder/WirsindeinekleineverloreneSchar}
+\input{Lieder/Woelflinkslied}
+\setthumb{Z}{26}
+\input{Lieder/ZuSpaet}
+\input{Lieder/Zuhause}
 
 \begin{intersong}
     \newpage\null
@@ -61,12 +119,39 @@
     \songchapter{Englische Lieder}
 \end{intersong}
 
-\setthumb{A}{1}
-\input{Lieder/LadyinBlack}
-\setthumb{F}{6}
-\input{Lieder/Flyaway}
+\setthumb{0}{1}
+\input{Lieder/500Miles}
+\setthumb{B}{2}
+\input{Lieder/BlowingintheWind}
+\input{Lieder/BoulevardofBrokenDreams}
+\input{Lieder/BreakfastatTiffanys}
+\setthumb{C}{4}
+\input{Lieder/Countryroads}
+\setthumb{D}{5}
+\input{Lieder/Dontlookbackinanger}
+\setthumb{F}{7}
 \input{Lieder/FatherandSon}
+\setthumb{H}{9}
+\input{Lieder/HeroOfWar}
+\setthumb{K}{12}
+\input{Lieder/KnockinonHeavensDoor}
+\setthumb{L}{13}
+\input{Lieder/LadyinBlack}
+\input{Lieder/LeavingonaJetPlane}
+\input{Lieder/LemonTree}
+\input{Lieder/Letitbe}
+\setthumb{R}{19}
+\input{Lieder/Radioactive}
+\input{Lieder/RockMySoul}
+\setthumb{S}{20}
+\input{Lieder/StreetsofLondon}
+\setthumb{T}{21}
+\input{Lieder/TheWildRover}
 
+\setthumb{A}{1}
+\input{Lieder/Whatshallwedowiththedrunkensailor.tex}
+\input{Lieder/WindOfChange}
+\input{Lieder/Wonderwall}
 
 \begin{intersong}
     \newpage
