--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -19,6 +19,7 @@
     \nothumb
     \markboth{}{}
     \songchapter{Christliches}
+    \newpage\null
 \end{intersong}
 
 \setthumb{D}{4}
@@ -39,6 +40,7 @@
     \nothumb
     \markboth{}{}
     \songchapter{Deutsche Lieder}
+    \newpage\null
 \end{intersong}
 
 
@@ -107,7 +109,7 @@
 \input{Lieder/Westerland}
 \input{Lieder/WirsinddesGeyers}
 \input{Lieder/WirsindeinekleineverloreneSchar}
-\input{Lieder/Woelflinkslied}
+\input{Lieder/Woelflingslied}
 \setthumb{Z}{26}
 \input{Lieder/ZuSpaet}
 \input{Lieder/Zuhause}
@@ -117,6 +119,7 @@
     \nothumb
     \markboth{}{}
     \songchapter{Englische Lieder}
+    \newpage\null
 \end{intersong}
 
 \setthumb{0}{1}
@@ -157,12 +160,16 @@
     \newpage
     \markboth{}{}
     \songchapter{Anhang}
+    \newpage\null
 \end{intersong}
 
 \nothumb
 \input{Misc/GrifftabelleUkuleleGCEA}
+\nothumb
 \input{Misc/GrifftabelleUkuleleADFisH}
+\nothumb
 \input{Misc/GrifftabelleUkuleleDGHE}
+\nothumb
 \input{Misc/GrifftabelleGitarre}
 
 
