--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -151,7 +151,7 @@
 \setthumb{T}{21}
 \input{Lieder/TheWildRover}
 
-\setthumb{A}{1}
+\setthumb{W}{23}
 \input{Lieder/Whatshallwedowiththedrunkensailor.tex}
 \input{Lieder/WindOfChange}
 \input{Lieder/Wonderwall}
