hopefully fix broken site endings

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -29,6 +29,9 @@
 \setthumb{L}{12}
 \input{Lieder/Laudatosi}
 \input{Lieder/LobetUndPreiset}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \setthumb{N}{14}
 \input{Lieder/NehmtAbschiedBrueder}
 \setthumb{W}{23}
@@ -46,22 +49,34 @@
 
 \setthumb{A}{1}
 \input{Lieder/AbendstretenElche}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \input{Lieder/Abenteuerland}
 \input{Lieder/Allesnurgeklaut}
 \setthumb{B}{2}
 \input{Lieder/Bellaciao}
 \input{Lieder/BellaCiao2}
 \input{Lieder/BieneMaja}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \setthumb{D}{4}
 \input{Lieder/Denkmal}
 \input{Lieder/DerMondistaufgegangen}
 \input{Lieder/DerPietamGalgenhaengt}
 \input{Lieder/DieGedankensindfrei}
 \input{Lieder/DieLappenhoch}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \input{Lieder/DieMoorsoldaten}
 \input{Lieder/DutraegstkeineLiebeindir}
 \setthumb{E}{5}
 \input{Lieder/EineInselmitzweiBergen}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \input{Lieder/EinKompliment}
 \input{Lieder/EswaraneinemSommertag}
 \setthumb{F}{6}
@@ -69,6 +84,9 @@
 \input{Lieder/FruehlingDringtInDenNorden}
 \setthumb{G}{7}
 \input{Lieder/GriechischerWein}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \setthumb{H}{8}
 \input{Lieder/Heutehiermorgendort}
 \input{Lieder/HierwaechstkeinAhorn}
@@ -77,7 +95,13 @@
 \input{Lieder/InJunkersKneipe}
 \setthumb{J}{10}
 \input{Lieder/Jalava}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \input{Lieder/JohnnyWalker}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \setthumb{M}{13}
 \input{Lieder/MarmorSteinundEisenbricht}
 \input{Lieder/MeinkleinergruenerKaktus}
@@ -95,13 +119,22 @@
 \input{Lieder/ProbiersmalmitGemuetlichkeit}
 \setthumb{R}{18}
 \input{Lieder/Raubritter}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \input{Lieder/RoterMond}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \input{Lieder/RoterWeinimBecher}
 \setthumb{S}{19}
 \input{Lieder/SchreinachLiebe}
 \input{Lieder/SkandalimSperrbezirk}
 \setthumb{U}{21}
 \input{Lieder/UeberdenWolken}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \input{Lieder/UnterdenToren}
 \setthumb{W}{23}
 \input{Lieder/Waswollenwirtrinken}
@@ -124,6 +157,9 @@
 
 \setthumb{0}{1}
 \input{Lieder/500Miles}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \setthumb{B}{2}
 \input{Lieder/BlowingintheWind}
 \input{Lieder/BoulevardofBrokenDreams}
@@ -138,6 +174,9 @@
 \input{Lieder/HeroOfWar}
 \setthumb{K}{12}
 \input{Lieder/KnockinonHeavensDoor}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \setthumb{L}{13}
 \input{Lieder/LadyinBlack}
 \input{Lieder/LeavingonaJetPlane}
@@ -157,6 +196,7 @@
 \input{Lieder/Wonderwall}
 
 \begin{intersong}
+    \nothumb
     \newpage
     \markboth{}{}
     \songchapter{Anhang}
