try fixing page ending again

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -29,7 +29,7 @@
 \setthumb{L}{12}
 \input{Lieder/Laudatosi}
 \begin{intersong} % Fix broken page ending
-    \flushbottom\newpage\flushbottom
+    \newpage
 \end{intersong}
 \input{Lieder/LobetUndPreiset}
 \setthumb{N}{14}
