try fixing page end & add songs

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -49,6 +49,9 @@
 
 \setthumb{A}{1}
 \input{Lieder/AbendstretenElche}
+\begin{intersong}
+    \flushbottom
+\end{intersong}
 \input{Lieder/Abenteuerland}
 \input{Lieder/Allesnurgeklaut}
 \setthumb{B}{2}
@@ -59,7 +62,9 @@
 \input{Lieder/Denkmal}
 \input{Lieder/DerMondistaufgegangen}
 \input{Lieder/DerPietamGalgenhaengt}
+\input{Lieder/DerTraumistaus}
 \input{Lieder/DieGedankensindfrei}
+\input{Lieder/DieInternationale}
 \input{Lieder/DieLappenhoch}
 \input{Lieder/DieMoorsoldaten}
 \input{Lieder/DutraegstkeineLiebeindir}
@@ -74,6 +79,7 @@
 \input{Lieder/FroescheWeinenNie}
 \input{Lieder/FruehlingDringtInDenNorden}
 \setthumb{G}{7}
+\input{Lieder/Geburtstagslied}
 \input{Lieder/GriechischerWein}
 \setthumb{H}{8}
 \input{Lieder/Heutehiermorgendort}
@@ -137,7 +143,7 @@
     \newpage\null
 \end{intersong}
 
-\setthumb{0}{1}
+\setthumb{\#}{1}
 \input{Lieder/500Miles}
 \setthumb{B}{2}
 \input{Lieder/BlowingintheWind}
