try fixing page end again

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -49,7 +49,9 @@
 
 \setthumb{A}{1}
 \input{Lieder/AbendstretenElche}
-\flushbottom
+\begin{intersong}
+    \vspace{-10cm}
+\end{intersong}
 \input{Lieder/Abenteuerland}
 \input{Lieder/Allesnurgeklaut}
 \setthumb{B}{2}
