new songs in book

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -49,9 +49,6 @@
 
 \setthumb{A}{1}
 \input{Lieder/AbendstretenElche}
-\begin{intersong}
-    \vspace{-10cm}
-\end{intersong}
 \input{Lieder/Abenteuerland}
 \input{Lieder/Allesnurgeklaut}
 \setthumb{B}{2}
@@ -73,6 +70,7 @@
 \begin{intersong} % Fix broken page ending
     \flushbottom\newpage\flushbottom
 \end{intersong}
+\input{Lieder/Einheitsfrontlied}
 \input{Lieder/EinKompliment}
 \input{Lieder/EswaraneinemSommertag}
 \setthumb{F}{6}
