--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -1,4 +1,5 @@
 \documentclass{book}
+\usepackage{graphicx}
 
 \providecommand{\bookname}{Tinnitus}
 
@@ -191,6 +192,8 @@
 \input{Misc/GrifftabelleUkuleleDGHE}
 \nothumb
 \input{Misc/GrifftabelleGitarre}
+\nothumb
+\input{Misc/Schlagmuster/Schlagmuster.tex}
 
 
 \end{songs}
