--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -1,5 +1,4 @@
 \documentclass{book}
-\usepackage{graphicx}
 
 \providecommand{\bookname}{Tinnitus}
 
@@ -172,7 +171,7 @@
 \input{Lieder/TheWildRover}
 
 \setthumb{W}{23}
-\input{Lieder/Whatshallwedowiththedrunkensailor.tex}
+\input{Lieder/Whatshallwedowiththedrunkensailor}
 \input{Lieder/WindOfChange}
 \input{Lieder/Wonderwall}
 
@@ -193,7 +192,7 @@
 \nothumb
 \input{Misc/GrifftabelleGitarre}
 \nothumb
-\input{Misc/Schlagmuster/Schlagmuster.tex}
+\input{Misc/Schlagmuster/Schlagmuster}
 
 
 \end{songs}
