--- a/Misc/Schlagmuster/Schlagmuster.tex
+++ b/Misc/Schlagmuster/Schlagmuster.tex
@@ -8,19 +8,19 @@
     \noindent\textbf{1. Ulf Kirsten (UK)} \newline
     Takt: 2/4, passt aber auch zu 4/4. Rythmus: lang-kurz-kurz.
     \begin{center}
-        \includegraphics[height=1cm]{Schm-UK.pdf}
+        \includegraphics[height=1cm]{Misc/Schlagmuster/Schm-UK.pdf}
     \end{center}
     
     \noindent\textbf{2. Franz Beckenbauer (FB)} \newline
     Takt: 3/4, passt aber auch zu 6/8. Rythmus: lang-kurz-kurz-kurz-kurz.
     \begin{center}
-        \includegraphics[height=1cm]{Schm-FB.pdf}
+        \includegraphics[height=1cm]{Misc/Schlagmuster/Schm-FB.pdf}
     \end{center}
     
     \noindent\textbf{3. Michael Rummenigge (MR)} \newline
     Takt: 4/4. Rythmus: lang-kurz-kurz-kurz-kurz-kurz-kurz.
     \begin{center}
-        \includegraphics[height=1cm]{Schm-MR.pdf}
+        \includegraphics[height=1cm]{Misc/Schlagmuster/Schm-MR.pdf}
     \end{center}
     
 
