Schlagmuster, Oedt referenzen

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -60,6 +60,7 @@
 \input{Lieder/DerMondistaufgegangen}
 \input{Lieder/DerPietamGalgenhaengt}
 \input{Lieder/DerTraumistaus}
+\input{Lieder/DieFelderVonVerdun}
 \input{Lieder/DieGedankensindfrei}
 \input{Lieder/DieInternationale}
 \input{Lieder/DieLappenhoch}
@@ -119,6 +120,7 @@
 \setthumb{S}{19}
 \input{Lieder/SchreinachLiebe}
 \input{Lieder/SkandalimSperrbezirk}
+\input{Lieder/Steigerlied}
 \setthumb{U}{21}
 \input{Lieder/UeberdenWolken}
 \input{Lieder/UnterdenToren}
