--- a/Lieder/Abenteuerland.tex
+++ b/Lieder/Abenteuerland.tex
@@ -4,6 +4,7 @@
     alb={Abenteuerland}, 
     index={Der triste Himmel macht krank}, 
     kssiv={102},
+    oedt={86},
 ]
 
 \interlude{Intro: \[Am] \[C] \[Em] \[D] | \[Am] \[C] \[Em] \[F]}
