--- a/Lieder/BlowingintheWind.tex
+++ b/Lieder/BlowingintheWind.tex
@@ -7,6 +7,8 @@
     kssiv={196}, 
     siru={104}, 
     index={How many roads must a man walk down},
+    oedt={152},
+    schm={MR}
 ]
 
 \beginverse
