--- a/Lieder/DerPietamGalgenhaengt.tex
+++ b/Lieder/DerPietamGalgenhaengt.tex
@@ -10,6 +10,8 @@
     tonspur={570}, 
     index={Piet am Galgen}, 
     index={Was kann ich denn dafür},
+    oedt={44},
+    schm={MR},
 ]
 
 \beginverse
