--- a/Lieder/DieGedankensindfrei.tex
+++ b/Lieder/DieGedankensindfrei.tex
@@ -8,7 +8,9 @@
     kssiv={71}, 
     siru={52},
     tonspur={206}, 
-    buedel={67}, 
+    buedel={67},
+    oedt={78}, 
+    schm={MR},
 ]
 
 \beginverse
