--- a/Lieder/EinKompliment.tex
+++ b/Lieder/EinKompliment.tex
@@ -4,6 +4,7 @@
     jahr={2002}, 
     index={Wenn man so will bist du das Ziel einer langen Reise}, 
     kssiv={294},
+    oedt={81},
 ]
 
 \beginverse
