--- a/Lieder/FroescheWeinenNie.tex
+++ b/Lieder/FroescheWeinenNie.tex
@@ -4,6 +4,7 @@
     alb={Schwer Scheff!}, 
     pfiii={148}, 
     index={Ich habe mir 'nen Frosch},
+    oedt={109},
 ]
 
 \interlude{Intro: \[C Am F G] \rep{2}}
