--- a/Lieder/LobetUndPreiset.tex
+++ b/Lieder/LobetUndPreiset.tex
@@ -3,6 +3,8 @@
     pfi={15}, 
     pfii={132},
     gruen={95}, 
+    oedt={15},
+    schm={FB}
 ]
 
 \includegraphics[draft=false, page=1]{Noten/LobetUndPreiset.pdf}
