--- a/Lieder/RoterWeinimBecher.tex
+++ b/Lieder/RoterWeinimBecher.tex
@@ -6,7 +6,9 @@
     gruen={76}, 
     kssiv={25}, 
     siru={195},
-    tonspur={438}, 
+    tonspur={438},
+    oedt={49},
+    schm={UK}
 ]
 
 \beginverse
