--- a/Lieder/StreetsofLondon.tex
+++ b/Lieder/StreetsofLondon.tex
@@ -7,6 +7,8 @@
     kssiv={174}, 
     siru={211}, 
     index={Have you seen the old man},
+    oedt={146},
+    schm={MR}
 ]
 
 \beginverse\memorize
