--- a/Lieder/WoZweiOderDrei.tex
+++ b/Lieder/WoZweiOderDrei.tex
@@ -1,6 +1,8 @@
 \beginsong{Wo zwei oder drei in meinem Namen versammelt sind}[
     wuw={Jesus-Bruderschaft}, 
     jahr={1972},
+    oedt={11},
+    schm={MR}
 ]
 
 \beginverse
