--- a/Lieder/RoterMond.tex
+++ b/Lieder/RoterMond.tex
@@ -7,7 +7,9 @@
     gruen={68}, 
     kssiv={38}, 
     siru={194},
-    tonspur={436}, 
+    tonspur={436},
+    oedt={43},
+    schm={UK}, 
 ]
 
 \beginverse
