--- a/Lieder/DieFelderVonVerdun.tex
+++ b/Lieder/DieFelderVonVerdun.tex
@@ -36,10 +36,10 @@ Ver^loren ihren ^Sinn.
 \endverse
 
 \beginverse 
-(Sprechgesang) "Das \[Em]Blut der Sold\[D]aten war rot wie der \[Em]Mohn. \[D] \[Em]
+\textnote{Sprechgesang} Das \[Em]Blut der Sold\[D]aten war rot wie der \[Em]Mohn. \[D] \[Em]
 Im \[D]Feuer \[A]verbrannte das \[Em]Gras. \[D] \[Em]
 Nur wenige \[D]kamen damals \[Em]davon. \[D] \[Em]
-Von denen \[D]keiner \[A]jemals \[Em]vergaß"
+Von denen \[D]keiner \[A]jemals \[Em]vergaß.
 \endverse
 
 \beginverse 
