--- a/Lieder/WennwirinderSchenkehaengen.tex
+++ b/Lieder/WennwirinderSchenkehaengen.tex
@@ -54,5 +54,5 @@ und auch ^den Ka^millen^tee, ^sehr zum ^Wohle! ^Prost! ^Olé!
 \endsong
 
 \beginscripture{}
-Qui nos rodunt... (aus der Carmina Burana) = Wer uns lacht, wird unkenntlich gemacht und nicht zusammen mit den Gerechten verzeichnet.
+Qui nos rodunt... (aus der Carmina Burana) = "Die, die uns anschnorren [sollen] nicht für Redliche gehalten und nicht zu den Gerechten geschrieben werden."
 \endscripture
