--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -37,6 +37,8 @@
 \setthumb{W}{23}
 \input{Lieder/WennDasBrot}
 \input{Lieder/WoZweiOderDrei}
+\setthumb{Z}{26}
+\input{Lieder/ZeigeUnsDenWeg}
 
 \begin{intersong}
     \newpage\null
@@ -46,25 +48,33 @@
     \newpage\null
 \end{intersong}
 
-
+\setthumb{\#}{0}
+\input{99Luftballons}
 \setthumb{A}{1}
 \input{Lieder/AbendstretenElche}
 \input{Lieder/Abenteuerland}
+\input{Lieder/AlleDieMitUnsAufKaperfahrtFahren}
 \input{Lieder/Allesnurgeklaut}
+\input{Lieder/ApplausApplaus}
+\input{Lieder/AufDemDonnerbalken}
+\input{Lieder/AufDermauerAufDerLauer}
 \setthumb{B}{2}
 \input{Lieder/Bellaciao}
 \input{Lieder/BellaCiao2}
 \input{Lieder/BieneMaja}
+\input{Lieder/BolleReisteJuengstZuPfingsten}
 \setthumb{D}{4}
 \input{Lieder/Denkmal}
 \input{Lieder/DerMondistaufgegangen}
 \input{Lieder/DerPietamGalgenhaengt}
 \input{Lieder/DerTraumistaus}
+\input{Lieder/DieAffenRasen}
 \input{Lieder/DieFelderVonVerdun}
 \input{Lieder/DieGedankensindfrei}
 \input{Lieder/DieInternationale}
 \input{Lieder/DieLappenhoch}
 \input{Lieder/DieMoorsoldaten}
+\input{Lieder/DreiChinesenmitdemKontrabass}
 \input{Lieder/DutraegstkeineLiebeindir}
 \setthumb{E}{5}
 \input{Lieder/EineInselmitzweiBergen}
@@ -75,15 +85,18 @@
 \input{Lieder/EinKompliment}
 \input{Lieder/EswaraneinemSommertag}
 \setthumb{F}{6}
+\input{Lieder/FlinkeHaende}
 \input{Lieder/FroescheWeinenNie}
 \input{Lieder/FruehlingDringtInDenNorden}
 \setthumb{G}{7}
 \input{Lieder/Geburtstagslied}
+\input{Lieder/GeileZeit}
 \input{Lieder/GriechischerWein}
 \setthumb{H}{8}
 \input{Lieder/Heutehiermorgendort}
 \input{Lieder/HierwaechstkeinAhorn}
 \setthumb{I}{9}
+\input{Lieder/IfYoureHappy}
 \input{Lieder/ImWagenvormir}
 \input{Lieder/InJunkersKneipe}
 \setthumb{J}{10}
@@ -92,8 +105,11 @@
 \begin{intersong} % Fix broken page ending
     \flushbottom\newpage\flushbottom
 \end{intersong}
+\input{Lieder/Junge}
 \setthumb{M}{13}
+\input{Lieder/MajorTom}
 \input{Lieder/MarmorSteinundEisenbricht}
+\input{Lieder/MeineOmaFaehrtImHuehnerstall}
 \input{Lieder/MeinkleinergruenerKaktus}
 \input{Lieder/Michelwarumweinestdu}
 \begin{intersong} % Fix broken page ending
@@ -106,6 +122,7 @@
     \flushbottom\newpage\flushbottom
 \end{intersong}
 \setthumb{P}{16}
+\input{Lieder/PerfekteWelle}
 \input{Lieder/ProbiersmalmitGemuetlichkeit}
 \setthumb{R}{18}
 \input{Lieder/Raubritter}
@@ -130,6 +147,7 @@
 \input{Lieder/Westerland}
 \input{Lieder/WirsinddesGeyers}
 \input{Lieder/WirsindeinekleineverloreneSchar}
+\input{Lieder/WirZogenInDasFeld}
 \input{Lieder/Woelflingslied}
 \setthumb{Z}{26}
 \input{Lieder/ZuSpaet}
@@ -151,6 +169,7 @@
 \input{Lieder/BreakfastatTiffanys}
 \setthumb{C}{4}
 \input{Lieder/Countryroads}
+\input{Lieder/CruelWorld}
 \setthumb{D}{5}
 \input{Lieder/Dontlookbackinanger}
 \setthumb{F}{7}
@@ -164,6 +183,8 @@
 \input{Lieder/LeavingonaJetPlane}
 \input{Lieder/LemonTree}
 \input{Lieder/Letitbe}
+\input{LiederLittleTalks}
+\input{Lieder/LongRoadToRuin}
 \setthumb{R}{19}
 \input{Lieder/Radioactive}
 \input{Lieder/RockMySoul}
