fix by tag and file names

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -49,15 +49,15 @@
 \end{intersong}
 
 \setthumb{\#}{0}
-\input{99Luftballons}
+\input{Lieder/99Luftballons}
 \setthumb{A}{1}
 \input{Lieder/AbendstretenElche}
 \input{Lieder/Abenteuerland}
-\input{Lieder/AlleDieMitUnsAufKaperfahrtFahren}
+\input{Lieder/AlleDieMitUnsAufKaperfahrtfahren}
 \input{Lieder/Allesnurgeklaut}
 \input{Lieder/ApplausApplaus}
 \input{Lieder/AufDemDonnerbalken}
-\input{Lieder/AufDermauerAufDerLauer}
+\input{Lieder/AufDerMauerAufDerLauer}
 \setthumb{B}{2}
 \input{Lieder/Bellaciao}
 \input{Lieder/BellaCiao2}
@@ -183,7 +183,7 @@
 \input{Lieder/LeavingonaJetPlane}
 \input{Lieder/LemonTree}
 \input{Lieder/Letitbe}
-\input{LiederLittleTalks}
+\input{Lieder/LittleTalks}
 \input{Lieder/LongRoadToRuin}
 \setthumb{R}{19}
 \input{Lieder/Radioactive}
