--- a/Lieder/99Luftballons.tex
+++ b/Lieder/99Luftballons.tex
@@ -1,4 +1,4 @@
-\beginsong{99 Luftballons}[by={Nena},oedt={80}]
+\beginsong{99 Luftballons}[wuw={Nena},oedt={80}]
 \newchords{luftballonchords}
 
 \beginverse\memorize[luftballonchords]
