--- a/Lieder/AlleDieMitUnsAufKaperfahrtfahren.tex
+++ b/Lieder/AlleDieMitUnsAufKaperfahrtfahren.tex
@@ -1,4 +1,4 @@
-\beginsong{Alle, die mit uns auf Kaperfahrt fahren}[by={Santiano}, oedt={47}]
+\beginsong{Alle, die mit uns auf Kaperfahrt fahren}[wuw={Santiano}, oedt={47}]
 \newchords{kaperchords}
 
 \beginverse
