--- a/Lieder/ApplausApplaus.tex
+++ b/Lieder/ApplausApplaus.tex
@@ -1,4 +1,4 @@
-\beginsong{Applaus, Applaus}[by={Sportfreunde Stiller}, oedt={82}]
+\beginsong{Applaus, Applaus}[wuw={Sportfreunde Stiller}, oedt={82}]
 \newchords{versechords}
 
 
