--- a/Lieder/AufDemDonnerbalken.tex
+++ b/Lieder/AufDemDonnerbalken.tex
@@ -1,4 +1,4 @@
-\beginsong{Auf dem Donnerbalken}[by={Jürgen Fastje}, oedt={70}]
+\beginsong{Auf dem Donnerbalken}[wuw={Jürgen Fastje}, oedt={70}]
 
 \beginverse
 \[C]Auf dem Donnerbalken saßen zwei Gestalten,
