--- a/Lieder/BolleReisteJuengstZuPfingsten.tex
+++ b/Lieder/BolleReisteJuengstZuPfingsten.tex
@@ -1,4 +1,4 @@
-\beginsong{Bolle reiste jüngst zu Pfingsten}[by={Jürgen Schöntges}, oedt={37}]
+\beginsong{Bolle reiste jüngst zu Pfingsten}[wuw={Jürgen Schöntges}, oedt={37}]
 
 \beginverse
 Bolle re\[G]iste jüngst zu P\[C]fingsten nach Pa\[D7]nkow war sein Z\[G]iel,
