--- a/Lieder/CruelWorld.tex
+++ b/Lieder/CruelWorld.tex
@@ -1,4 +1,4 @@
-\beginsong{Cruel World}[by={Willie Nelson}]
+\beginsong{Cruel World}[wuw={Willie Nelson}]
 
 \beginchorus
 \[D]Cruel, cruel world, must I go\[G] on?
@@ -10,7 +10,7 @@ And I've been liv\[G]ing too long
 
 \beginverse
 This big ol' wo\[D]rld sure got me running 'rou\[G]nd
-I heard a voi\[D]ce that said, "Just settle \[A]down"\[A7]
+I heard a voi\[D]ce that said, 'Just settle \[A]down'\[A7]
 And with the moonl\[D]ight as my gui\[D7]de
 And with this feel\[G]ing deep inside
 I know no\[D]w that I\[A] am homeward bou\[D]nd
