--- a/Lieder/DieAffenRasen.tex
+++ b/Lieder/DieAffenRasen.tex
@@ -1,4 +1,4 @@
-\beginsong{Die Affen rasen durch den Wald}[by={Die Lollipops}, oedt={36}]
+\beginsong{Die Affen rasen durch den Wald}[wuw={Die Lollipops}, oedt={36}]
 
 \beginverse
 Die \[A]Affen rasen durch den Wald, der eine macht den andern kalt.
