--- a/Lieder/DreiChinesenmitdemKontrabass.tex
+++ b/Lieder/DreiChinesenmitdemKontrabass.tex
@@ -1,4 +1,4 @@
-\beginsong{Drei Chinesen mit dem Kontrabass}[by={Unbekannt}]
+\beginsong{Drei Chinesen mit dem Kontrabass}[wuw={Unbekannt}]
 
 \beginverse
 \[E]Drei Chinesen mit dem \[H]Kontrabass
