--- a/Lieder/FlinkeHaende.tex
+++ b/Lieder/FlinkeHaende.tex
@@ -1,4 +1,4 @@
-\beginsong{Flinke Hände Flinke Füße}[by={Wolfgang Poeplau}]
+\beginsong{Flinke Hände Flinke Füße}[wuw={Wolfgang Poeplau}]
 
 % oedt={19}
 
