--- a/Lieder/GeileZeit.tex
+++ b/Lieder/GeileZeit.tex
@@ -1,4 +1,4 @@
-\beginsong{Geile Zeit}[by={Juli}, oedt={94}]
+\beginsong{Geile Zeit}[wuw={Juli}, oedt={94}]
 
 \beginverse
 \[Am]Hast Du geglaubt, hast Du geh\[G]offt, dass alles be\[F]sser wird?
