--- a/Lieder/LongRoadToRuin.tex
+++ b/Lieder/LongRoadToRuin.tex
@@ -1,4 +1,4 @@
-\beginsong{Long Road To Ruin}[by={Foo Fighters }]
+\beginsong{Long Road To Ruin}[wuw={Foo Fighters }]
 
 \beginverse
 \[C]Here now, don't make a sound
