--- a/Lieder/MajorTom.tex
+++ b/Lieder/MajorTom.tex
@@ -1,4 +1,4 @@
-\beginsong{Major Tom}[by={Peter Schilling}]
+\beginsong{Major Tom}[wuw={Peter Schilling}]
 
 \beginverse
 \[Em]Gründlich druchgecheckt steht sie da
