--- a/Lieder/ZeigeUnsDenWeg.tex
+++ b/Lieder/ZeigeUnsDenWeg.tex
@@ -1,4 +1,4 @@
-\beginsong{Zeige uns den Weg}[by={Richard Strauß-König}, oedt={5}]
+\beginsong{Zeige uns den Weg}[wuw={Richard Strauß-König}, oedt={5}]
 
 \beginverse
 \[Em]Zeige uns den W\[C]eg, wenn der M\[D]orgen win\[Em]kt,
