--- a/Lieder/IfYoureHappy.tex
+++ b/Lieder/IfYoureHappy.tex
@@ -1,4 +1,4 @@
-\beginsong{If You're Happy and You Know It}[by=Datia Ben Dor]
+\beginsong{If You're Happy and You Know It}[wuw=Datia Ben Dor]
 
 \beginverse
 If you're \[C]happy and you know it, clap your \[G]hands
@@ -16,10 +16,10 @@ If you're ^happy and you know it, stomp your ^feet
 \endverse
 
 \beginverse
-If you're ^happy and you know it, shout ^"Hurray!" 
-If you're ^happy and you know it, shout ^"Hurray!" 
-If you're ^happy and you know it, then your ^really want to show itt
-If you're ^happy and you know it, shout ^"Hurray!" 
+If you're ^happy and you know it, shout: ^Hurray!
+If you're ^happy and you know it, shout: ^Hurray! 
+If you're ^happy and you know it, then your ^really want to show it
+If you're ^happy and you know it, shout: ^Hurray! 
 \endverse
 
 \endsong
