--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -57,6 +57,9 @@
 \input{Lieder/Allesnurgeklaut}
 \input{Lieder/ApplausApplaus}
 \input{Lieder/AufDemDonnerbalken}
+\begin{intersong} % Fix broken page ending
+    \newpage
+\end{intersong}
 \input{Lieder/AufDerMauerAufDerLauer}
 \setthumb{B}{2}
 \input{Lieder/Bellaciao}
@@ -96,7 +99,6 @@
 \input{Lieder/Heutehiermorgendort}
 \input{Lieder/HierwaechstkeinAhorn}
 \setthumb{I}{9}
-\input{Lieder/IfYoureHappy}
 \input{Lieder/ImWagenvormir}
 \input{Lieder/InJunkersKneipe}
 \setthumb{J}{10}
@@ -176,6 +178,8 @@
 \input{Lieder/FatherandSon}
 \setthumb{H}{9}
 \input{Lieder/HeroOfWar}
+\setthumb{I}{10}
+\input{Lieder/IfYoureHappy}
 \setthumb{K}{12}
 \input{Lieder/KnockinonHeavensDoor}
 \setthumb{L}{13}
