--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -45,7 +45,6 @@
     \nothumb
     \markboth{}{}
     \songchapter{Deutsche Lieder}
-    \newpage\null
 \end{intersong}
 
 \setthumb{\#}{0}
@@ -140,6 +139,8 @@
 \input{Lieder/SchreinachLiebe}
 \input{Lieder/SkandalimSperrbezirk}
 \input{Lieder/Steigerlied}
+\setthumb{T}{20}
+\input{Lieder/TanteausMarokko}
 \setthumb{U}{21}
 \input{Lieder/UeberdenWolken}
 \input{Lieder/UnterdenToren}
@@ -178,8 +179,10 @@
 \input{Lieder/FatherandSon}
 \setthumb{H}{9}
 \input{Lieder/HeroOfWar}
+\input{Lieder/HouseOftheRisingSun}
 \setthumb{I}{10}
 \input{Lieder/IfYoureHappy}
+\input{Lieder/IWantitthatWay}
 \setthumb{K}{12}
 \input{Lieder/KnockinonHeavensDoor}
 \setthumb{L}{13}
@@ -195,6 +198,7 @@
 \setthumb{S}{20}
 \input{Lieder/StreetsofLondon}
 \setthumb{T}{21}
+\input{Lieder/TeenageDirtback}
 \input{Lieder/TheWildRover}
 
 \setthumb{W}{23}
