--- a/Lieder/TanteausMarokko.tex
+++ b/Lieder/TanteausMarokko.tex
@@ -48,7 +48,7 @@ Und dann trinken wir ’ne Flasche, wenn sie ^kommt, gluck gluck
 Und dann ^trinken wir ’ne Flasche, und dann ^trinken wir ’ne Flasche
 Und dann trinken wir ’ne Flasche, wenn sie ^kommt
 Hipp, hopp, hoppeldihopp, piff paff, oink, oink, gluck gluck
-\beginverse
+\endverse
 \printchorus
 \beginverse
 Und dann ^essen wir ’ne Torte, wenn sie kommt, schmatz schmatz
