--- a/Lieder/HouseOftheRisingSun.tex
+++ b/Lieder/HouseOftheRisingSun.tex
@@ -38,8 +38,8 @@ To ^wear that ^ball and ^chain \[C] \[D] \[F] \[Am] \[E] \[Am] \[E]
 \beginverse
 Well, there ^is a ^house in ^New Orleans  ^
 They ^call the ^Rising \[E]Sun
-And it′s ^been the ^ruin of ^many a poor \[F]boy
-And \[Am]God, \[E7]I know I′m \[Am]one  \[C] \[D] \[F] \[Am] \[E] \[Am] \[E]
+And it's ^been the ^ruin of ^many a poor \[F]boy
+And \[Am]God, \[E7]I know I'm \[Am]one  \[C] \[D] \[F] \[Am] \[E] \[Am] \[E]
 \endverse
 
 \endsong
