--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -198,7 +198,7 @@
 \setthumb{S}{20}
 \input{Lieder/StreetsofLondon}
 \setthumb{T}{21}
-\input{Lieder/TeenageDirtback}
+\input{Lieder/TeenageDirtbag}
 \input{Lieder/TheWildRover}
 
 \setthumb{W}{23}
