--- a/Lieder/Heutehiermorgendort.tex
+++ b/Lieder/Heutehiermorgendort.tex
@@ -11,9 +11,19 @@
     oedt={40},
 ]
 
+\transpose{-5}
+
+%Simpler chords but Notes are unchangeable :(
+%\beginverse
+%\endverse
+%\includegraphics[draft=false, width=1\textwidth]{Noten/Lied050.pdf}
+
 \beginverse
+Heute \[C]hier, morgen dort bin kaum \[F]da muß ich \[C]fort
+hab' mich niemals des \[Am]wegen be\[G]klagt
+hab' es \[C]selbst so gewählt nie die \[F]Jahre ge\[C]zählt
+nie nach ge\[Am]stern und \[G]morgen ge\[C]fragt
 \endverse
-\includegraphics[draft=false, width=1\textwidth]{Noten/Lied050.pdf}	
 
 \beginverse
 Dass man \[C]mich kaum vermisst, schon nach \[F]Tagen ver\[C]gisst,
