--- a/Lieder/JohnnyWalker.tex
+++ b/Lieder/JohnnyWalker.tex
@@ -8,29 +8,29 @@
 ]
 
 \beginverse
-\[g-a-h-C] Johnny Walker, jetzt bist du wieder \[C]da.
-\[g-a-h-C] Johnny Walker, ich zahl' dich gleich in \[G]bar.
-\[C]Johnny Walker, du \[F]hast mich nie ent\[C]täuscht.
-\[G]Johnny, du \[F]bist mein bester \[C]Freund.
+\[G]Johnny Walker, jetzt \[C]bist du wieder \[G]da.
+\[G]Johnny Walker, ich \[C]zahl' dich gleich in \[D]bar.
+\[G]Johnny Walker, du \[C]hast mich nie ent\[G]täuscht.
+\[D]Johnny, du \[C7]bist mein bester \[G]Freund.
 \endverse
 
 \beginverse
-^ Johnny Walker, immer braun ge^brannt.
-^ Johnny Walker, mit dem Rücken an die ^Wand.
+^Johnny Walker, ^immer braun ge^brannt.
+^Johnny Walker, mit dem ^Rücken an die ^Wand.
 ^Johnny Walker, komm' ^gieß' dich nochmal ^ein. 
 ^Johnny, lass' ^13 gerade ^sein.
 \endverse
 
 \beginchorus
-\[c-h-a-G]Ich hab's versucht, ich komme \[F]ohne dich nicht \[C]aus.
-\[E]Wozu auch, du gefällst mir \[Am]ja!
-\[F]Kein Mensch hört mir \[C]so gut zu wie du.
-Und \[G]Johnny, du \[F]lachst mich auch nie \[C]aus.
+\[D]Ich hab's versucht, ich komme \[C]ohne dich nicht \[G]aus.
+\[H7]Wozu auch, du gefällst mir \[Em]ja!
+\[C]Kein Mensch hört mir \[G]so gut zu wie du.
+Und \[D]Johnny, du \[C7]lachst mich auch nie \[G]aus.
 \endchorus
 
 \beginverse
-^ Johnny Walker, ich glaub' nicht an den Quatsch. ^
-^ Johnny Walker, du wärst 'ne Teufels^fratz.
+^Johnny Walker, ich ^glaub' nicht an den Q^uatsch.
+^Johnny Walker, du ^wärst 'ne Teufels^fratz.
 ^Johnny Walker, von ^mir aus röste ^mich.
 ^Johnny, ich ^fühl mich könig^lich! 
 \endverse
@@ -38,10 +38,10 @@ Und \[G]Johnny, du \[F]lachst mich auch nie \[C]aus.
 \printchorus
 
 \beginverse
-^ Johnny Walker, lalala lalala. ^
-^ Johnny Walker, lalala lala^la.
+^Johnny Walker, ^lalala ^lalala.
+^Johnny Walker, ^lalala ^lalala.
 ^Johnny Walker, du ^hast mich nie ent^täuscht.
- ^Johnny du ^bist mein bester ^Freund. \rep{3}
+^Johnny du ^bist mein bester ^Freund. \rep{3}
 \endverse
 
 
