--- a/Lieder/Raubritter.tex
+++ b/Lieder/Raubritter.tex
@@ -13,9 +13,17 @@
     schm={UK}
 ]
 
+\transpose{-5}
+
+%Simpler Chords, but Notes are unchangeable :( 
+%\beginverse
+%\endverse
+%\includegraphics[draft=false, width=1\textwidth]{Noten/Lied077.pdf}
+
 \beginverse
+\[Am]Von der Festung \[F]dröhnt derbe Männer\[Am]stimme.
+\[Am]Rauher Kehle \[F]Sang, hell die Gläser \[Am]klingen.
 \endverse
-\includegraphics[draft=false, width=1\textwidth]{Noten/Lied077.pdf}	 
 
 \beginverse
 \[Am]In uns'rer Knechtschaft \[F]Zeit griffen wir zu \[Am]Waffen,
