--- a/Lieder/ZuSpaet.tex
+++ b/Lieder/ZuSpaet.tex
@@ -14,11 +14,11 @@
 \endverse
 
 \beginverse\memorize
-\[F]Warum hast du mir das angetan? \[B&]Ich hab's von einem Bekannten erfahr'n.
-\[F]Du hast jetzt einen neuen Freund. \[C]Zwei Wochen lang hab ich nur geweint!
-Jetzt schaust du weg,\[F] grüßt mich nicht mehr,\[C] und ich \[B&]lieb' dich immer noch so sehr!
-Ich weiß, was dir\[F] an ihm gefällt:\[C] Ich bin \[B&]arm und er hat Geld!
-\[Gm]Du liebst ihn nur, weil er ein Auto hat und \[C]nicht wie ich, ein klappriges Damenrad. \[B&] \[D]
+\[G]Warum hast du mir das angetan? \[C]Ich hab's von einem Bekannten erfahr'n.
+\[G]Du hast jetzt einen neuen Freund. \[D]Zwei Wochen lang hab ich nur geweint!
+Jetzt schaust du weg,\[G] grüßt mich nicht mehr,\[D] und ich \[C]lieb' dich immer noch so sehr!
+Ich weiß, was dir\[G] an ihm gefällt:\[D] Ich bin \[C]arm und er hat Geld!
+\[Am]Du liebst ihn nur, weil er ein Auto hat und \[D]nicht wie ich, ein klappriges Damenrad. \[C] \[D]
 \endverse
 
 \beginchorus
