--- a/Lieder/Heutehiermorgendort.tex
+++ b/Lieder/Heutehiermorgendort.tex
@@ -25,6 +25,13 @@ hab' es \[C]selbst so gewählt nie die \[F]Jahre ge\[C]zählt
 nie nach ge\[Am]stern und \[G]morgen ge\[C]fragt
 \endverse
 
+\beginchorus
+Manchmal \[G]träume ich schwer und dann \[F]denk' ich, es \[C]wär'
+Zeit zu \[G]bleiben und nun was ganz \[F]and'res zu \[C]tun.
+So vergeht Jahr um Jahr und es \[F]ist mir längst \[C]klar,
+dass nichts \[Am]bleibt, dass nichts \[G]bleibt, wie es \[C]war.
+\endchorus
+
 \beginverse
 Dass man \[C]mich kaum vermisst, schon nach \[F]Tagen ver\[C]gisst,
 wenn ich längst wieder \[Am]anderswo \[G]bin,
@@ -32,12 +39,7 @@ stört und \[C]kümmert mich nicht, vielleicht \[F]bleibt mein Ge\[C]sicht
 doch dem \[Am]ein' oder \[G]and'ren im \[C]Sinn.
 \endverse
 
-\beginchorus
-Manchmal \[G]träume ich schwer und dann \[F]denk' ich, es \[C]wär'
-Zeit zu \[G]bleiben und nun was ganz \[F]and'res zu \[C]tun.
-So vergeht Jahr um Jahr und es \[F]ist mir längst \[C]klar,
-dass nichts \[Am]bleibt, dass nichts \[G]bleibt, wie es \[C]war.
-\endchorus
+\printchorus
 
 \beginverse
 Fragt mich ^einer, warum ich so ^bin, bleib ich ^stumm,
