--- a/Lieder/JohnnyWalker.tex
+++ b/Lieder/JohnnyWalker.tex
@@ -14,6 +14,13 @@
 \[D]Johnny, du \[C7]bist mein bester \[G]Freund.
 \endverse
 
+\beginchorus
+\[D]Ich hab's versucht, ich komme \[C]ohne dich nicht \[G]aus.
+\[H7]Wozu auch, du gefällst mir \[Em]ja!
+\[C]Kein Mensch hört mir \[G]so gut zu wie du.
+Und \[D]Johnny, du \[C7]lachst mich auch nie \[G]aus.
+\endchorus
+
 \beginverse
 ^Johnny Walker, ^immer braun ge^brannt.
 ^Johnny Walker, mit dem ^Rücken an die ^Wand.
@@ -21,12 +28,7 @@
 ^Johnny, lass' ^13 gerade ^sein.
 \endverse
 
-\beginchorus
-\[D]Ich hab's versucht, ich komme \[C]ohne dich nicht \[G]aus.
-\[H7]Wozu auch, du gefällst mir \[Em]ja!
-\[C]Kein Mensch hört mir \[G]so gut zu wie du.
-Und \[D]Johnny, du \[C7]lachst mich auch nie \[G]aus.
-\endchorus
+\printchorus
 
 \beginverse
 ^Johnny Walker, ich ^glaub' nicht an den Q^uatsch.
