--- a/Lieder/Raubritter.tex
+++ b/Lieder/Raubritter.tex
@@ -25,16 +25,18 @@
 \[Am]Rauher Kehle \[F]Sang, hell die Gläser \[Am]klingen.
 \endverse
 
-\beginverse
-\[Am]In uns'rer Knechtschaft \[F]Zeit griffen wir zu \[Am]Waffen,
-schlugen uns're \[F]Herr'n, Grafen und auch \[Am]Pfaffen.
-\endverse
-
 \beginchorus
 \[G]Be\[C]herrschen dies Ge\[G]biet, \[Am]singen stolz ihr \[E]Lied: 
 \[Am]Raubritter, Raubritter, wie weit \[G]ist \[C]un\[G]ser \[Am]Land?
 \[F]Raubritter, Raubritter, wie stark \[C]ist \[F]uns'\[G]re \[Am]Hand?
 \endchorus
+
+\beginverse
+\[Am]In uns'rer Knechtschaft \[F]Zeit griffen wir zu \[Am]Waffen,
+schlugen uns're \[F]Herr'n, Grafen und auch \[Am]Pfaffen.
+\endverse
+
+\printchorus
  
 \beginverse
 ^Groß ist uns're ^Macht, solange wir ^vereint.
