fix page ending

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -96,6 +96,9 @@
 \input{Lieder/GriechischerWein}
 \setthumb{H}{8}
 \input{Lieder/Heutehiermorgendort}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \input{Lieder/HierwaechstkeinAhorn}
 \setthumb{I}{9}
 \input{Lieder/ImWagenvormir}
