fix songs & add new songs

--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -66,7 +66,9 @@
 \input{Lieder/BieneMaja}
 \input{Lieder/BolleReisteJuengstZuPfingsten}
 \setthumb{D}{4}
+\input{Lieder/DasistWillich}
 \input{Lieder/Denkmal}
+\input{Lieder/DerBusfahrer}
 \input{Lieder/DerMondistaufgegangen}
 \input{Lieder/DerPietamGalgenhaengt}
 \input{Lieder/DerTraumistaus}
@@ -183,6 +185,9 @@
 \setthumb{H}{9}
 \input{Lieder/HeroOfWar}
 \input{Lieder/HouseOftheRisingSun}
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \setthumb{I}{10}
 \input{Lieder/IfYoureHappy}
 \input{Lieder/IWantitthatWay}
@@ -203,7 +208,9 @@
 \setthumb{T}{21}
 \input{Lieder/TeenageDirtbag}
 \input{Lieder/TheWildRover}
-
+\begin{intersong} % Fix broken page ending
+    \flushbottom\newpage\flushbottom
+\end{intersong}
 \setthumb{W}{23}
 \input{Lieder/Whatshallwedowiththedrunkensailor}
 \input{Lieder/WindOfChange}
