--- a/Lieder/CruelWorld.tex
+++ b/Lieder/CruelWorld.tex
@@ -1,5 +1,7 @@
 \beginsong{Cruel World}[wuw={Willie Nelson}]
 
+\capo{3}
+
 \beginchorus
 \[D]Cruel, cruel world, must I go\[G] on?
 \[D]Cruel, cruel world, I'm moving \[A]on\[A7]
