--- a/Lieder/DasistWillich.tex
+++ b/Lieder/DasistWillich.tex
@@ -44,7 +44,7 @@
  
   \printchorus
  
- \beginverse
+ \beginverse*
  \[E]Hier ist immer Was los, \[A]hier ist das Schützenfest los! 
  \endverse
  
