--- a/Misc/basic.tex
+++ b/Misc/basic.tex
@@ -51,6 +51,7 @@
 % Umlaute
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{textcomp} % für promille zeichen!
 
 % PDF Seiten Import, Watermarks für Daumenregister und Multicolumn für das Impressum
 \usepackage{pdfpages}
