--- a/Lieder/DerBusfahrer.tex
+++ b/Lieder/DerBusfahrer.tex
@@ -1,6 +1,6 @@
 \beginsong{Der Busfahrer}[wuw={David}]
 
-\textnote{Vor dem Singen, bitte mind. 1\textperthousand{} trinken!}
+\textnote{Vorraussetzung zum singen: 1 Promille Blutalkohol}
 
 \beginverse
 \[G]Ja, wer fährt in Willich \[D]den Bus-Bus zur \[G]Effelter-Mühl?
