--- a/Ausgaben/Tinnitus/Vorwort.tex
+++ b/Ausgaben/Tinnitus/Vorwort.tex
@@ -4,4 +4,26 @@
 Willich, \today
 \end{flushright}
 
+Liebe Pfadfinder,
+
+"Es soll wieder mehr gesungen werden!", hieß es in veschiedenen Leiterrunden und Vorstandstreffen. 
+Doch wie singen ohne ein Liederbuch? 
+Es musste also ein neues Liederbuch her, am besten ein eigenes mit vielen Liedern und durchgehenden Akkorden.
+Nach einigen Verzögerungen, ahben wir es aber nun doch geschafft ein Buch für euch zusammenzustellen und 
+wir sind stolz es euch nun vorlegen zu können.
+
+Ganz besonders möchten wir uns aber noch bei der Region Kurhessen im Verband Christlicher Pfadfinderinnen und Pfadfinder bedanken.
+Ohne die immense Vorarbeit des erstellens einer frei verfügbaren \latex Vorlage und dem einpflegen mehrerer hundert Lieder 
+hätten wir dieses Buch nicht in so kurzer Zeit erstellen können.
+
+Bedanken möchten wir uns außerdem beim Stamm Oedt der DPSG, bei denen wir uns stark von der Lilederauswahl haben beeinflussen lassen.
+
+Zusätzlich danken wir Anna für das Erstellen des Einbandes.
+
+Nun aber viel Spaß beim Singen!
+
+Gut Pfad!
+
+David und Nils
+
 Imagine hier mega das gute Vorwort.
